--- a/week1/demo/index.html
+++ b/week1/demo/index.html
@@ -29,5 +29,43 @@
     <!--HORIZONTAL RULE below h4: creates separation between sections of page-->
     <hr>
 
+    <!--DIVs are dividers/divisions, they do not contain content, they contain and help organize other html elements-->
+    <div style="background-color:powderblue; color:darkblue;">
+        <h2>List Types in HTML</h2>
+
+        <!--ordered list-->
+        <ol>
+            <!--add a list item for each line item in the list-->
+            <li>Gardening</li>
+            <li>Playing with Twilight</li>
+            <li>Watching TV</li>
+        </ol>
+
+        <!--unordered list-->
+
+        <ul>
+            <!--add a list item for each line item in the list-->
+            <li>Cats</li>
+            <li>And Cats</li>
+            <li>And More Cats!</li>
+        </ul>
+
+    </div>
+
+    <hr>
+
+    <h2>Basic Paragraph Text + In-Line Tags</h2>
+
+    <!--in-line elements do NOT create structure, they are used in line of another HTML element! they usually add visual style or emphasis, help support SEO, or support data management-->
+
+    <p>Hello, my name is Alex. I have a cat named <b>Twilight.</b> 
+        <br> <!--break space, creates a new empty line-->
+        Her favorite food is <i>chicken.</i> She is the cutest cat <u>on the planet</u>!!!</p>
+
+        <!--in lines for SEO support (Search Engine Optimization)-->
+        <p>The <strong>strong</strong> tag make content appear bolded.</p>
+        <p>The <em>emphasis</em> tag makes content appear italicized.</p>
+        
+
 </body>
 </html>
