--- a/week2/bioPage/index.html
+++ b/week2/bioPage/index.html
@@ -8,6 +8,26 @@
     <meta name="description" content="week 2">
     <meta name="author" content="Alex Hart">
 
+    <style>
+        div {
+
+            border:1px solid black;
+            padding:10px;
+            margin:5px;
+
+        }
+
+        a {
+            text-decoration: none;
+            font-size: 22px;
+            margin-right: 22px;
+        }
+
+        a:hover {
+            color:teal;
+        }
+    </style>
+
 </head>
 <body>
     <h1 id="header">Alexandra Hart - About Me</h1>
@@ -21,7 +41,17 @@
     <div id="bio">
         <h2>About Me</h2>
         <p>My name is Alex Hart. I am in my first year of college at New England Institute of Technology. My major is software engineering. This path is the most intriguing to me because I have always taken a liking to computers and their background processes. Additionally, I enjoy spending time with my family and my cat. I have also taught myself to play the piano and the guitar. Thanks for visiting my Bio Website!</p>
-        <img src="week2/bio page/images/me.jpg">
+        <img src="images/me.jpg" alt="Photo of Alex Hart" width="375" height="500">
+    </div>
+
+    <div id="schooling">
+        <h2>Schooling</h2>
+
+        <ol>
+            <li>Cranston Area Career and Technical Center</li>
+            <li>Cranston High School West</li>
+            <li>New England Institute of Technology</li>
+        </ol>
     </div>
 </body>
 </html>
