updated bio and w3 demo

--- a/week2/bioPage/index.html
+++ b/week2/bioPage/index.html
@@ -43,7 +43,7 @@
         <p>My name is Alex Hart. I am in my first year of college at New England Institute of Technology. My major is software engineering. This path is the most intriguing to me because I have always taken a liking to computers and their background processes. Additionally, I enjoy spending time with my family and my cat. I have also taught myself to play the piano and the guitar. Thanks for visiting my Bio Website!</p>
         <img src="images/me.jpg" alt="Photo of Alex Hart" width="375" height="500">
     </div>
-
+    <hr>
     <div id="schooling">
         <h2>Schooling</h2>
 
@@ -52,6 +52,14 @@
             <li>Cranston High School West</li>
             <li>New England Institute of Technology</li>
         </ol>
+    </div>
+    <hr>
+    <div id="hobbies">
+        <h2>Hobbies</h2>
+        <ul>
+            <li>Playing the Acoustic Guitar</li>
+            <li></li>
+        </ul>
     </div>
 </body>
 </html>
