--- a/week3/week3_demo/index.html
+++ b/week3/week3_demo/index.html
@@ -67,9 +67,13 @@
         <div id="content">
             <h2>Home Page</h2>
 
+            <!--relative image paths: image files that live in our sites root folder; SAFEST OPTION-->
+            <img src="images/showPoster.jpg" alt="HBO's Official Show Poster for Season 1 of The Last of Us" style="width:75%;">
+
         </div>
         <!--footer-->
         <div id="footer" class="border">
+            <a href="#wrapper">Back to Top</a>
             <p>&copy; ALEX HART | SE111 | SPRING 2025</p>
         </div>
 
