--- a/week3/week3_demo/places.html
+++ b/week3/week3_demo/places.html
@@ -67,9 +67,12 @@
         <div id="content">
             <h2>Places Page</h2>
 
+            <img src="images/boston.jpg" alt="image from The Last of Us" style="width:75%;">
+
         </div>
         <!--footer-->
         <div id="footer" class="border">
+            <a href="#wrapper">Back to Top</a>
             <p>&copy; ALEX HART | SE111 | SPRING 2025</p>
         </div>
 
