finished bio page

--- a/week2/bioPage/index.html
+++ b/week2/bioPage/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <meta name="description" content="week 2">
+    <meta name="description" content="week 2 bio page, se111.05, 4/7/2025">
     <meta name="author" content="Alex Hart">
 
     <style>
@@ -31,35 +31,46 @@
 </head>
 <body>
     <h1 id="header">Alexandra Hart - About Me</h1>
+    <!--NAVIGATION BAR-->
     <div id="nav">
         <a href="#bio">BIO</a>
         <a href="#schooling">SCHOOLING</a>
         <a href="#hobbies">HOBBIES</a>
-        <a href="#footer">FOOTER</a>
+        <a href="#footer">Bottom of Page</a>
     </div>
-<!--BIO PAGE ------------------->
+    <!--ABOUT ME PAGE-->
     <div id="bio">
         <h2>About Me</h2>
-        <p>My name is Alex Hart. I am in my first year of college at New England Institute of Technology. My major is software engineering. This path is the most intriguing to me because I have always taken a liking to computers and their background processes. Additionally, I enjoy spending time with my family and my cat. I have also taught myself to play the piano and the guitar. Thanks for visiting my Bio Website!</p>
+        <p>My name is <b>Alex Hart</b>. I am in my first year of college at New England Institute of Technology. My major is software engineering. This path is the most intriguing to me because I have always taken a liking to computers and their background processes. Additionally, I enjoy spending time with my family and my cat. I have also taught myself to play the piano and the guitar. Thanks for visiting my Bio Website!</p>
         <img src="images/me.jpg" alt="Photo of Alex Hart" width="375" height="500">
     </div>
     <hr>
+    <!--SCHOOLING PAGE-->
     <div id="schooling">
         <h2>Schooling</h2>
 
         <ol>
             <li>Cranston Area Career and Technical Center</li>
             <li>Cranston High School West</li>
-            <li>New England Institute of Technology</li>
+            <li><strong>New England Institute of Technology</strong></li>
         </ol>
     </div>
     <hr>
+    <!--HOBBIES PAGE-->
     <div id="hobbies">
         <h2>Hobbies</h2>
         <ul>
-            <li>Playing the Acoustic Guitar</li>
-            <li></li>
+            <li>Playing the <i>Acoustic</i> Guitar</li>
+            <li>Painting</li>
+            <li>Listening to Music</li>
         </ul>
+        <p>Here is a link to one of my favorite albums <em>of all time</em>: <a href="https://open.spotify.com/album/0e9GjrztzBw8oMC6n2CDeI?si=fa1f4ff8c73949d3">The Record - Boygenius</a></p>
+        <img src="images/catPainting.jpg" alt="cat painting by me" width="375" height="500">
+    </div>
+    <div id="footer">
+        <a href="#header">Back to Top</a>
+        <hr>
+        <img src="images/validation.png" alt="validation checker! spoiler alert: no errors found :]" width="550" height="350">
     </div>
 </body>
 </html>
