--- a/week4/w4-movie/index.html
+++ b/week4/w4-movie/index.html
@@ -3,31 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>The Owl House | Home</title>
+
+    <style>
+        hr {
+            color:yellow;
+        }
+
+        p, .title, h1, h2 {
+            color:white;
+        }
+
+        div {
+            background-color: blueviolet;
+            border:2px solid greenyellow;
+            padding:10px;
+            margin:10px;
+        }
+
+        .link {
+            color:aqua;
+            size:14px;
+        }
+    </style>
 </head>
 <body>
     <div id="wrapper">
+
         <hr>
+
         <div id="header">
-            <h1 id="title"><em>Title</em></h1>
+            <h1 class="title"><em>The Owl House</em></h1>
         </div> <!--end of header div-->
 
         <div id="nav">
-            <a href="index.html">About</a>
-            <a href="cast.html">Cast</a>
-            <a href="review.html">Review</a>
+            <a href="index.html" class="link">About</a>
+            <a href="cast.html" class="link">Cast</a>
+            <a href="review.html" class="link">Review</a>
         </div> <!--end of nav div-->
+
         <hr>
+
         <div id="content">
-            <h2>Title of Page</h2>
-            <div id="main-content"></div> <!--end of main content div-->
+            <h2 class="title">All About <em>The Owl House</em></h2>
+            <div id="main-content">
+
+                <p>synopsis</p>
+
+                <div id="info">
+                    <p><b>Rating:</b> value</p>
+                    <p><b>Genre:</b> value</p>
+                    <p><b>Production Company:</b> value</p>
+                    <p><b>Release Date:</b> value</p>
+                    <p><b>End Date:</b> value</p>
+                </div>
+            </div> <!--end of main content div-->
         </div> <!--end of content div-->
+
         <hr>
+
         <div id="footer">
-            <a href="#wrapper">Back to Top</a>
-            <img src="" alt="alt text">
+            <a href="#wrapper" class="link">Back to Top</a>
+            <br>
+            <img src="" alt="validation screenshot">
             <p>&copy;Alex Hart | SE111.04 | Spring 2025</p>
-        </div>
+        </div> <!--end of footer div-->
+
     </div> <!--end of wrapper div-->
 </body>
 </html>
