--- a/week4/w4-movie/index.html
+++ b/week4/w4-movie/index.html
@@ -48,14 +48,15 @@
             <h2 class="title">All About <em>The Owl House</em></h2>
             <div id="main-content">
 
-                <p>synopsis</p>
+                <p>Accidentally sent to the world of the Boiling Isles before a trip to summer camp, a teenage human named Luz longs to become a witch. She is aided by rebellious Eda the Owl Lady and a pint-sized demon named King. Throughout her journey in the Boiling Isles, she learns valuable lessons about life, love, loss, and being her true self.</p>
 
                 <div id="info">
-                    <p><b>Rating:</b> value</p>
-                    <p><b>Genre:</b> value</p>
-                    <p><b>Production Company:</b> value</p>
-                    <p><b>Release Date:</b> value</p>
-                    <p><b>End Date:</b> value</p>
+                    <p><b>Rating:</b> TV-Y7-FV</p>
+                    <p><b>Genre:</b> Fantasy</p>
+                    <p><b>Production Company:</b> Disney Television Animation</p>
+                    <p><b>Writers:</b> Dana Terrace, Molly Knox Ostertag</p>
+                    <p><b>Release Date:</b> January 2020</p>
+                    <p><b>End Date:</b> April 2023</p>
                 </div>
             </div> <!--end of main content div-->
         </div> <!--end of content div-->
