--- a/week4/w4-movie/index.html
+++ b/week4/w4-movie/index.html
@@ -15,7 +15,7 @@
         }
 
         div {
-            background-color: blueviolet;
+            background-color: rgb(59, 0, 85);
             border:2px solid greenyellow;
             padding:10px;
             margin:10px;
