--- a/week4/w4-movie/cast.html
+++ b/week4/w4-movie/cast.html
@@ -15,7 +15,7 @@
         }
 
         div {
-            background-color: blueviolet;
+            background-color: rgb(112, 0, 159);
             border:2px solid greenyellow;
             padding:10px;
             margin:10px;
@@ -50,64 +50,64 @@
 
                 <div class="character">
                     <h3>Luz</h3>
-                    <img src="" alt="image of Luz" height="50">
-                    <p>Actor:</p>
+                    <img src="images/luz.jpg" alt="image of Luz" height="50">
+                    <p>Sarah-Nicole Robles</p>
                     <hr>
                 </div>
 
                 <div class="character">
                     <h3>Amity</h3>
-                    <img src="" alt="image of Amity" height="50">
+                    <img src="images/amity.jpg" alt="image of Amity" height="50">
                     <p>Mae Whitman</p>
                     <hr>
                 </div>
 
                 <div class="character">
                     <h3>King</h3>
-                    <img src="" alt="image of King" height="50">
-                    <p>Actor:</p>
+                    <img src="images/king.jpg" alt="image of King" height="50">
+                    <p>Alex Hirsch</p>
                     <hr>
                 </div>
 
                 <div class="character">
                     <h3>Eda</h3>
-                    <img src="" alt="image of Eda" height="50">
-                    <p>Actor:</p>
+                    <img src="images/eda.jpg" alt="image of Eda" height="50">
+                    <p>Wendie Malick</p>
                     <hr>
                 </div>
 
                 <div class="character">
                     <h3>Hooty</h3>
-                    <img src="" alt="image of Hooty" height="50">
-                    <p>Actor:</p>
+                    <img src="images/hooty.jpg" alt="image of Hooty" height="50">
+                    <p>Alex Hirsch</p>
                     <hr>
                 </div>
 
                 <div class="character">
                     <h3>Lilith</h3>
-                    <img src="" alt="image of Lilith" height="50">
-                    <p>Actor:</p>
+                    <img src="images/lilith.jpg" alt="image of Lilith" height="50">
+                    <p>Cissy Jones</p>
                     <hr>
                 </div>
 
                 <div class="character">
                     <h3>Willow</h3>
-                    <img src="" alt="image of Willow" height="50">
-                    <p>Actor:</p>
+                    <img src="images/willow.jpg" alt="image of Willow" height="50">
+                    <p>Tati Gabrielle</p>
                     <hr>
                 </div>
 
                 <div class="character">
                     <h3>Hunter</h3>
-                    <img src="" alt="image of Hunter" height="50">
-                    <p>Actor:</p>
+                    <img src="images/hunter.jpg" alt="image of Hunter" height="50">
+                    <p>Zeno Robinson</p>
                     <hr>
                 </div>
 
                 <div class="character">
                     <h3>Gus</h3>
-                    <img src="" alt="image of Gus" height="50">
-                    <p>Actor:</p>
+                    <img src="images/gus.jpg" alt="image of Gus" height="50">
+                    <p>Issac Ryan Brown</p>
                     <hr>
                 </div>
 
@@ -119,7 +119,7 @@
         <div id="footer">
             <a href="#wrapper" class="link">Back to Top</a>
             <br>
-            <img src="" alt="validation screenshot">
+            <img src="images/amity.jpg" alt="validation screenshot">
             <p>&copy;Alex Hart | SE111.04 | Spring 2025</p>
         </div> <!--end of footer div-->
 
