--- a/week4/w4-movie/index.html
+++ b/week4/w4-movie/index.html
@@ -15,7 +15,7 @@
         }
 
         div {
-            background-color: rgb(59, 0, 85);
+            background-color: rgb(112, 0, 159);
             border:2px solid greenyellow;
             padding:10px;
             margin:10px;
@@ -66,7 +66,7 @@
         <div id="footer">
             <a href="#wrapper" class="link">Back to Top</a>
             <br>
-            <img src="" alt="validation screenshot">
+            <img src="images/amity.jpg" alt="validation screenshot">
             <p>&copy;Alex Hart | SE111.04 | Spring 2025</p>
         </div> <!--end of footer div-->
 
