--- a/week4/w4-movie/review.html
+++ b/week4/w4-movie/review.html
@@ -10,12 +10,12 @@
             color:yellow;
         }
 
-        p, .title, h1, h2 {
+        p, .title, h1, h2, h3, ul, li {
             color:white;
         }
 
         div {
-            background-color: blueviolet;
+            background-color: rgb(112, 0, 159);
             border:2px solid greenyellow;
             padding:10px;
             margin:10px;
@@ -49,7 +49,10 @@
             <div id="main-content">
                 <p><b>Alexandra Hart</b> <i>April 14, 2025</i> &#9733;&#9733;&#9733;&#9733;&#9733;</p>
 
-                <p>short 2-3 paragraph review</p>
+                <p>This show was absolutely amazing! Each character is so wonderfully developed and complex. I also loved the wide range of representation and diversity in the characters. Luz has an amazing journey of self-discovery, and everyone can learn something from it. Being true to yourself has great importance!!</p>
+
+                
+                <p>Dana Terrace really made a wonderful show with the time she had at Disney. I wish that Disney didn't cut the third season short. If the show had a third season, it could've aired some more fun filler episodes instead of strictly plot-related content. However, I still loved the show and would love it either way.</p>
 
                 <p>Check out the <i>official</i> <a href="https://www.imdb.com/title/tt8050756/" class="link">IMDB page HERE!</a></p>
 
@@ -57,8 +60,8 @@
                     <h3><em>The Owl House</em> Trivia!!</h3>
 
                     <ul>
-                        <li></li>
-                        <li></li>
+                        <li>Disney cut the third season of the show to three 40-minute episodes. They claimed it was due to the fact that the show "didn't fit the brand."</li>
+                        <li>The Owl House is the first</li>
                         <li></li>
                     </ul>
                 </div>
@@ -70,7 +73,7 @@
         <div id="footer">
             <a href="#wrapper" class="link">Back to Top</a>
             <br>
-            <img src="" alt="validation screenshot">
+            <img src="images/amity.jpg" alt="validation screenshot">
             <p>&copy;Alex Hart | SE111.04 | Spring 2025</p>
         </div> <!--end of footer div-->
 
