FINISHED TOH SITE

--- a/week4/w4-movie/cast.html
+++ b/week4/w4-movie/cast.html
@@ -23,7 +23,7 @@
 
         .link {
             color:aqua;
-            size:14px;
+            
         }
     </style>
 </head>
@@ -119,7 +119,7 @@
         <div id="footer">
             <a href="#wrapper" class="link">Back to Top</a>
             <br>
-            <img src="images/amity.jpg" alt="validation screenshot">
+            <img src="images/cast-valid.png" alt="validation screenshot">
             <p>&copy;Alex Hart | SE111.04 | Spring 2025</p>
         </div> <!--end of footer div-->
 
