--- a/week4/w4-movie/index.html
+++ b/week4/w4-movie/index.html
@@ -23,7 +23,6 @@
 
         .link {
             color:aqua;
-            size:14px;
         }
     </style>
 </head>
@@ -50,7 +49,7 @@
 
                 <p>Accidentally sent to the world of the Boiling Isles before a trip to summer camp, a teenage human named Luz longs to become a witch. She is aided by rebellious Eda the Owl Lady and a pint-sized demon named King. Throughout her journey in the Boiling Isles, she learns valuable lessons about life, love, loss, and being her true self.</p>
 
-                <div id="info">
+                <div class="info">
                     <p><b>Rating:</b> TV-Y7-FV</p>
                     <p><b>Genre:</b> Fantasy</p>
                     <p><b>Production Company:</b> Disney Television Animation</p>
@@ -58,6 +57,8 @@
                     <p><b>Release Date:</b> January 2020</p>
                     <p><b>End Date:</b> April 2023</p>
                 </div>
+
+                <img src="images/cover.png" alt="cover photo of The Owl House">
             </div> <!--end of main content div-->
         </div> <!--end of content div-->
 
@@ -66,7 +67,7 @@
         <div id="footer">
             <a href="#wrapper" class="link">Back to Top</a>
             <br>
-            <img src="images/amity.jpg" alt="validation screenshot">
+            <img src="images/index-valid.png" alt="validation screenshot">
             <p>&copy;Alex Hart | SE111.04 | Spring 2025</p>
         </div> <!--end of footer div-->
 
