--- a/week4/w4-movie/review.html
+++ b/week4/w4-movie/review.html
@@ -23,7 +23,7 @@
 
         .link {
             color:aqua;
-            size:14px;
+            
         }
     </style>
 </head>
@@ -61,8 +61,10 @@
 
                     <ul>
                         <li>Disney cut the third season of the show to three 40-minute episodes. They claimed it was due to the fact that the show "didn't fit the brand."</li>
-                        <li>The Owl House is the first</li>
-                        <li></li>
+                        <li>The first letter of each episode spells out a secret message for each season! The first seasons secret message is "A Witch Loses a True Way." The second seasons message is "Seek the Key, Fear the Lock." Although the third season only had three episodes, the first words of each title spelled out "Thanks for Watching."</li>
+                        <li>Alex Hirsch came up with the concept of Hooty's voice after doing his best Mickey Mouse impression. It ended up being Hooty's voice, and it stuck for three years!</li>
+                        <li>The Owl House was the first Disney TV show to feature a queer relationship between two main characters! Luz and Amity clearly confirm their relationship in Season 2 and continue it through the end of the series.</li>
+                        <li>Dana Terrace's main inspiration to keep writing her "weird" show came from a collegue who kept telling her that no one will like her concept. Just a reminder to follow your dreams and believe in your work!</li>
                     </ul>
                 </div>
             </div> <!--end of main content div-->
@@ -73,7 +75,7 @@
         <div id="footer">
             <a href="#wrapper" class="link">Back to Top</a>
             <br>
-            <img src="images/amity.jpg" alt="validation screenshot">
+            <img src="images/review-valid.png" alt="validation screenshot">
             <p>&copy;Alex Hart | SE111.04 | Spring 2025</p>
         </div> <!--end of footer div-->
 
